fix: remove max height not to overlap

--- a/css/index.css
+++ b/css/index.css
@@ -63,7 +63,6 @@ p,
 .tmpl-post li,
 img {
   max-width: 37.5em; /* 600px /16 */
-  max-height: 37.5em;
 }
 p,
 .tmpl-post li {
